# RepoMind

./: .gitignore  LICENSE  README.md  pyproject.toml
repo_surgeon/: __init__.py  cli.py  fs.py  tracing.py
repo_surgeon/detectors/: __init__.py  base.py
tests/: test_cli.py  test_fs.py  test_registry.py  test_tracing.py
traces/: sample.run.jsonl
